ci(workflow): explicitly pass repository input to actions in test workflow
Clarify the repository input for all action steps instead of relying on default context to improve robustness and transparency in the CI workflow. This change prevents potential ambiguities and ensures the intended repository is consistently referenced during GitHub Actions runs.

--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,8 @@ inputs:
     description: 'GitHub token for API calls'
     required: true
   repository:
-    description: 'Owner/repo (default: ${{ github.repository }})'
+    description: 'Owner/repo (format: owner/repo)'
     required: false
-    default: '${{ github.repository }}'
   year_format:
     description: 'Digits of year: 2 or 4'
     required: false
