--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
       
       - name: Validate Output
         run: |
@@ -42,6 +43,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
           current_version: "25001a"
       
       - name: Validate Output
@@ -66,6 +68,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
           year_format: "4"
       
       - name: Validate Output
@@ -90,6 +93,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
           current_version: "invalid"
         continue-on-error: true
       
@@ -113,12 +117,14 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
       
       - name: Second Run (should increment suffix)
         id: second-run
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
           current_version: ${{ steps.first-run.outputs.tag }}
       
       - name: Validate Sequential Runs
