fix(ci): update tag output handling and validation patterns in GitHub Actions
Correct the tag output syntax to use GitHub's recommended file-based approach instead of deprecated console commands, ensuring compatibility with the latest workflow runner versions. Also refine the regex patterns in tests for tag validation to accurately reflect the expected date and suffix formats, improving the robustness and correctness of version tag validation in CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Validate Output
         run: |
           echo "Generated tag: ${{ steps.test-basic.outputs.tag }}"
-          # Basic validation - should match pattern like 25001a or 2025001a
-          if [[ "${{ steps.test-basic.outputs.tag }}" =~ ^[0-9]{2,4}[0-9]{3}[1-7][a-z]+$ ]]; then
+          # Basic validation - should match pattern like 25216a (YYWWD + suffix)
+          if [[ "${{ steps.test-basic.outputs.tag }}" =~ ^[0-9]{2}[0-9]{2}[1-7][a-z]+$ ]]; then
             echo "✅ Tag format is valid"
           else
             echo "❌ Tag format is invalid: ${{ steps.test-basic.outputs.tag }}"
@@ -49,8 +49,8 @@ jobs:
       - name: Validate Output
         run: |
           echo "Generated tag: ${{ steps.test-current.outputs.tag }}"
-          # Should be next in sequence (25001b or next day)
-          if [[ "${{ steps.test-current.outputs.tag }}" =~ ^[0-9]{2,4}[0-9]{3}[1-7][a-z]+$ ]]; then
+          # Should be next in sequence (25216b or next day)
+          if [[ "${{ steps.test-current.outputs.tag }}" =~ ^[0-9]{2}[0-9]{2}[1-7][a-z]+$ ]]; then
             echo "✅ Tag format is valid"
           else
             echo "❌ Tag format is invalid: ${{ steps.test-current.outputs.tag }}"
@@ -74,8 +74,8 @@ jobs:
       - name: Validate Output
         run: |
           echo "Generated tag: ${{ steps.test-4digit.outputs.tag }}"
-          # Should be 4-digit year format
-          if [[ "${{ steps.test-4digit.outputs.tag }}" =~ ^[0-9]{4}[0-9]{3}[1-7][a-z]+$ ]]; then
+          # Should be 4-digit year format like 2025216a (YYYYWWD + suffix)
+          if [[ "${{ steps.test-4digit.outputs.tag }}" =~ ^[0-9]{4}[0-9]{2}[1-7][a-z]+$ ]]; then
             echo "✅ 4-digit year format is valid"
           else
             echo "❌ 4-digit year format is invalid: ${{ steps.test-4digit.outputs.tag }}"
